--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <div id="calculator">
         <input id="display" readonly>
         <div id ="buttons">
-            <button>x</button>
+            <button class="operator_btn">x</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>-</button>
+            <button class="operator_btn">-</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>+</button>
+            <button class="operator_btn">+</button>
             <button>1</button>
             <button>2</button>
             <button>3</button>
-             <button>/</button>
+             <button class="operator_btn">/</button>
             <button>.</button> 
             <button>0</button>
             
-            <button>=</button>
+            <button class="operator_btn">=</button>
            
-            <button>C</button>
+            <button class="operator_btn">C</button>
 
         </div>
 
