--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
     <div id="calculator">
         <input id="display" readonly>
         <div id ="buttons">
-            <button class="operator_btn">x</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button class="operator_btn">-</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button class="operator_btn">+</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-             <button class="operator_btn">/</button>
-            <button>.</button> 
-            <button>0</button>
+            <button onclick="appendToDisplay('x')"class="operator_btn" >x</button>
+            <button onclick="appendToDisplay('7')">7</button>
+            <button onclick="appendToDisplay('8')">8</button>
+            <button onclick="appendToDisplay('9')">9</button>
+            <button onclick="appendToDisplay('/')"class="operator_btn" >/</button>
+            <button onclick="appendToDisplay('4')">4</button>
+            <button onclick="appendToDisplay('5')">5</button>
+            <button onclick="appendToDisplay('6')">6</button>
+            <button  onclick="appendToDisplay('+')"class="operator_btn">+</button>
+            <button onclick="appendToDisplay('1')">1</button>
+            <button onclick="appendToDisplay('2')">2</button>
+            <button onclick="appendToDisplay('3')">3</button>
+             <button onclick="appendToDisplay('-')" class="operator_btn">-</button>
+            <button onclick="appendToDisplay('.')">.</button> 
+            <button onclick="appendToDisplay('0')">0</button>
             
-            <button class="operator_btn">=</button>
+            <button class="operator_btn" onclick="calculate()">=</button>
            
-            <button class="operator_btn">C</button>
+            <button class="operator_btn" onclick="clearDisplay()">C</button>
 
         </div>
 
     </div>
+    <script src="jS/script.js"></script>
 </body>
 </html>
