--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="calculator">
         <input id="display" readonly>
         <div id ="buttons">
-            <button onclick="appendToDisplay('x')"class="operator_btn" >x</button>
+            <button onclick="appendToDisplay('*')"class="operator_btn" >x</button>
             <button onclick="appendToDisplay('7')">7</button>
             <button onclick="appendToDisplay('8')">8</button>
             <button onclick="appendToDisplay('9')">9</button>
